<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_edit_profile"

            android:layout_marginTop="35dp"
            android:background="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="22dp"

            android:textColor="@color/primary_900"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/faq" />

    </LinearLayout>



    <!-- Pertanyaan 1 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/faq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_faq_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_faq_1"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Pertanyaan 2 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/faq2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_faq_2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_faq_2"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Pertanyaan 3 -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/faq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_faq_3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_faq_3"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
