<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_bg"
    tools:context=".ui.welcome.WelcomeActivity">

    <!-- TextView -->


    <TextView
        android:id="@+id/tv_welcome_msg"
        android:layout_width="342dp"
        android:layout_height="87dp"
        android:layout_marginTop="544dp"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:backgroundTint="@color/primary_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_msg" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
